--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -11,25 +11,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-.favButton{
-  background-color: rgba(136, 136, 136, 0.116);
-  padding: 10px;
-  border: none;
-  width: 100%;
-  cursor: pointer;
-}
 
-h1{
-  text-align: center;
-}
+
 
 nav{
   display: flex;
   width: 100vw;
   justify-content: space-around;
-  padding: 1rem;
-  background-color: rgb(255, 238, 0);
+  padding: 5px;
+  background: #FFBE3F;
+
 }
+
+
+
+h1{
+  text-align: center;
+}
+
+
 
 a{
   color: #000;
@@ -52,7 +52,7 @@ footer {
   width: 100%;
   height: 40px;
   margin-top: 1rem;
-  background-color: rgb(250, 205, 7);
+  background: #FFBE3F;
 }
 
 footer > img{
@@ -148,3 +148,4 @@ tr:nth-child(even) {
   flex-direction: column;
   align-items: center;
 }
+
