--- a/Frontend/src/Components/styles/Navbar.css
+++ b/Frontend/src/Components/styles/Navbar.css
@@ -1,18 +1,16 @@
 
-
-  .navbar {
-    width: 100%;
-  }
-
-
   .navbar {
     display: flex;
     justify-content: space-between;
     position: fixed;
     top: 0;
     z-index: 1000; 
+    width: 100%;
+    height: 120px;
+    background: #FFBE3F;
   }
 
+  
 
 .right-block {
   display: flex;
