fix columnas del home

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -70,13 +70,10 @@ a:hover{
 }
 
 .card-grid{
-  display: flex;
-  justify-content: space-evenly;
-  gap: 1rem;
-  width: 40vw;
-  height: auto;
-  flex-wrap: wrap;
-  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 25% 25%;
+  place-items: center;
+  justify-content: center;
 }
 
 .card-image{
