--- a/Frontend/src/Components/styles/Home.css
+++ b/Frontend/src/Components/styles/Home.css
@@ -31,8 +31,23 @@
 
   }
 
+
+  .add-product-button {
+    position: absolute;
+    top: 10px; 
+    right: 10px; 
+    cursor: pointer;
+    margin-top: 230px;
+  }
+
+  .add-product-button img{
+    height:75px;
+    width:75px;
+  }
+
+
   .buscador{
-    margin-top: 118px;
+    margin-top: 0px;
     background-color: black;
     display:flex;
     width: 100%;
