--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,7 +1,7 @@
 
 body {
   margin: 0;
-  padding: 0;
+  padding-top: 120px;
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -18,7 +18,6 @@ code {
 
 .main-container {
   padding: 20px;
-  margin-top: 120px
 }
 
 
