--- a/Frontend/src/Components/styles/Footer.css
+++ b/Frontend/src/Components/styles/Footer.css
@@ -3,29 +3,23 @@
 footer {
     display: flex;
     padding: 2rem;
-    position: relative;
     top:12rem;
     bottom: 0;
     width: 100%;
-    height: 60px;
     margin-top: 1rem;
     background: #FFBE3F;
     box-sizing: border-box;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background-color: #FFBE3F;
 }
-
 
 footer > p{
     margin: 0;
     text-align: center;
     
   }
-
-  
-  .iconos {
+  .iconos-footer {
     display: flex;
     align-items: center;
   }
@@ -45,4 +39,13 @@ footer > p{
     width: 100%;
     height: 100%;
     object-fit: contain; 
+  }
+
+  @media (max-width: 768px){
+    footer{
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      height: 300px;
+    }
   }
