implementacion del panel admin / conexion con el back

--- a/Frontend/src/Components/styles/Home.css
+++ b/Frontend/src/Components/styles/Home.css
@@ -3,14 +3,9 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 10px;
-<<<<<<< HEAD
-  margin: 20px;
-  width: 350px; /* Ancho de la tarjeta */
-=======
   margin: 10px;
   width: 200px;
   /* Ancho de la tarjeta */
->>>>>>> 9e797e20fccc61a518a72976cbecd00f340c6fd4
   text-align: center;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -27,12 +22,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-<<<<<<< HEAD
-  
-  }
-=======
 }
->>>>>>> 9e797e20fccc61a518a72976cbecd00f340c6fd4
 
 main {
   display: flexbox;
@@ -118,31 +108,6 @@ main {
     align-items: center;
     justify-content: center;
     justify-content: space-between;
-
-<<<<<<< HEAD
-    }
-    .btn-detail{
-      background-color: black;
-      color: white;
-      padding: 10px 20px;
-      margin-left: 10px;
-      cursor: pointer;
-      border-radius: 5px;
-      width: 150px;
-      font-size: 16px;
-     }
-
-    
-    @media (max-width: 768px){
-      .buscador{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        justify-content: space-between;
-        
-      }
-    }
-=======
+    flex-direction: column;
   }
 }
->>>>>>> 9e797e20fccc61a518a72976cbecd00f340c6fd4
