--- a/Frontend/src/Components/styles/Footer.css
+++ b/Frontend/src/Components/styles/Footer.css
@@ -11,7 +11,7 @@ footer {
     box-sizing: border-box;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 0 60px
 }
 
 footer > p{
