--- a/Frontend/src/Components/styles/Navbar.css
+++ b/Frontend/src/Components/styles/Navbar.css
@@ -1,4 +1,4 @@
-
+/*
   .navbar {
     display: flex;
     justify-content: space-between;
@@ -54,14 +54,14 @@
   width: 100%;
   height: 100%;
   object-fit: contain; /* Para que la imagen se ajuste dentro del contenedor sin molestar */
-}
+/*}
 
 
 
   @media (max-width: 768px) {
 
     /* .: header :. */
-
+/*
     .nav-menu{
         display:none
     }
@@ -81,3 +81,74 @@
   }
 
 
+*/
+
+
+/**/
+
+
+/* Navbar Styles */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
+  height: 120px;
+  background: #FFBE3F;
+  padding: 0 60px; /* Añadido espacio en los lados */
+  box-sizing: border-box; /* Box-sizing para incluir padding en el ancho total */
+}
+
+.right-block {
+  display: flex;
+  align-items: center;
+}
+
+.right-block button {
+  background-color: black;
+  color: white;
+  padding: 10px 20px;
+  margin-left: 10px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.right-block button.nav-button {
+  width: 184px;
+  height: 44px;
+}
+
+.burger-menu {
+  display: none;
+}
+
+.logo-container {
+  width: 110px;
+  height: 110px;
+}
+
+.logo {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+/* Media Query for Small Screens */
+@media (max-width: 768px) {
+  .nav-menu {
+    display: none;
+  }
+
+  .burger-menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .right-block {
+    display: none;
+  }
+}
