--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,10 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap');
+
+* {
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
+}
+
 body {
   margin: 0;
   padding-top: 120px;
-  box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #D7DBDD;
@@ -119,7 +123,7 @@ tr:nth-child(even) {
 @media (max-width: 768px) {
 
 
-  
+
   .card-grid {
     display: grid;
     grid-template-columns: 25%;
