Rutas protegidas - Login - Logout - Navbar - Trello #14 #15

--- a/Frontend/src/Components/styles/Navbar.css
+++ b/Frontend/src/Components/styles/Navbar.css
@@ -1,92 +1,3 @@
-/*
-  .navbar {
-    display: flex;
-    justify-content: space-between;
-    position: fixed;
-    top: 0;
-    z-index: 1000; 
-    width: 100%;
-    height: 120px;
-    background: #FFBE3F;
-  }
-
-  
-
-.right-block {
-  display: flex;
-  align-items: center;
-}
-
-
-
-.right-block button {
-  background-color: black;
-  color: white;
-  padding: 10px 20px;
-  margin-left: 10px;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
-.right-block button.nav-button {
-  width: 184px;
-  height: 44px;
-  top: 24px;
-  left: 1048px;
-  border-radius: 10px;
-  border: 1px;
-}
-
-
-
-  .burger-menu{
-    display:none;
-}
-
-
-.logo-container {
-  
-  width: 110px;
-  height: 110px;
-}
-
-.logo {
-  width: 100%;
-  height: 100%;
-  object-fit: contain; /* Para que la imagen se ajuste dentro del contenedor sin molestar */
-/*}
-
-
-
-  @media (max-width: 768px) {
-
-    /* .: header :. */
-/*
-    .nav-menu{
-        display:none
-    }
-   
-
-
-    .burger-menu{
-      display: flex;
-      align-items: center;
-      justify-content: center; 
-    }
-
-    .right-block{
-        display:none;
-    }
-
-  }
-
-
-*/
-
-
-/**/
-
-
 /* Navbar Styles */
 .navbar {
   display: flex;
@@ -102,6 +13,24 @@
   box-sizing: border-box; /* Box-sizing para incluir padding en el ancho total */
 }
 
+.user-initials {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  border-radius: 50%;
+  background-color: #000000; /* Puedes ajustar el color según tus preferencias */
+  color: #ffffff; /* Color del texto, puede ser blanco o cualquier otro color que contraste */
+  font-size: 16px;
+  font-weight: bold;
+  margin-right: 8px; /* Espacio entre las iniciales y el botón de cerrar sesión */
+}
+
+
+.user-greeting{
+  padding: 50px;
+}
 .right-block {
   display: flex;
   align-items: center;
