--- a/Frontend/src/Components/styles/Card.css
+++ b/Frontend/src/Components/styles/Card.css
@@ -1,5 +1,4 @@
-
-.card {
+/*.card {
     display: flex;
     justify-content: space-around;
     flex-direction: column;
@@ -9,27 +8,6 @@
     border: 0.5px solid rgb(136, 136, 136);
 }
 
-
-.card {
-
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px;
-    width: 200px;
-  
-    text-align: center;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    display: inline-block;
-  }
-  
-  .card img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 5px;
-  }
-  
 
 
 
@@ -44,6 +22,9 @@
     font-weight: bold;
     font-size: 12px;
 }
+
+
+
 .card-content button:hover{
     cursor: pointer;
 }
@@ -51,40 +32,20 @@
 
 .card:hover {
     border: 0.5px solid rgb(206, 217, 142);
-}
-
-
-/*
-.card-grid {
+  }
+  
+  .card-grid {
     display: grid;
     grid-template-columns: 25% 25%;
     place-items: center;
     justify-content: center;
-}
-
-*/
+  }
   
-.card-image {
+  .card-image {
     display: flex;
     justify-content: space-evenly;
     gap: 1rem;
     width: 200px;
     height: auto;
     flex-wrap: wrap;
-}
-
-
-@media (max-width: 768px) {
-
-    .card-grid {
-      display: grid;
-      grid-template-columns: 25%;
-      place-items: center;
-      justify-content: center;
-    }
-  }
-
-  
-
-
-
+  }*/
