--- a/Frontend/src/Components/styles/Home.css
+++ b/Frontend/src/Components/styles/Home.css
@@ -1,3 +1,13 @@
+
+.card-grid {
+  display: grid;
+  grid-template-columns: 25% 25%;
+  place-items: center;
+  justify-content: center;
+}
+
+/*
+
 .card {
 
   border: 1px solid #ccc;
@@ -5,7 +15,7 @@
   padding: 10px;
   margin: 10px;
   width: 200px;
-  /* Ancho de la tarjeta */
+
   text-align: center;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -18,6 +28,8 @@
   border-radius: 5px;
 }
 
+*/
+
 .contenedor {
   display: flex;
   flex-wrap: wrap;
@@ -27,8 +39,6 @@
 main {
   display: flexbox;
   align-items: center;
-
-
 }
 
 
