--- a/Frontend/src/Components/styles/Navbar.css
+++ b/Frontend/src/Components/styles/Navbar.css
@@ -1,4 +1,23 @@
-/* Navbar Styles */
+
+
+/*  */
+
+
+
+.right-block {
+  display: flex;
+  align-items: center;
+  flex-direction: column; 
+}
+.user-info {
+  display: flex;
+  align-items: center;
+}
+
+.user-info div {
+  margin-right: 8px; 
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -9,8 +28,13 @@
   width: 100%;
   height: 120px;
   background: #FFBE3F;
-  padding: 0 60px; /* Añadido espacio en los lados */
-  box-sizing: border-box; /* Box-sizing para incluir padding en el ancho total */
+  padding: 0 60px; 
+  box-sizing: border-box; 
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
 }
 
 .user-initials {
@@ -20,17 +44,17 @@
   line-height: 40px;
   text-align: center;
   border-radius: 50%;
-  background-color: #000000; /* Puedes ajustar el color según tus preferencias */
-  color: #ffffff; /* Color del texto, puede ser blanco o cualquier otro color que contraste */
+  background-color: #000000; 
+  color: #ffffff; 
   font-size: 16px;
   font-weight: bold;
-  margin-right: 8px; /* Espacio entre las iniciales y el botón de cerrar sesión */
+  margin-right: 8px; 
 }
 
-
-.user-greeting{
+.user-greeting {
   padding: 50px;
 }
+
 .right-block {
   display: flex;
   align-items: center;
@@ -65,7 +89,7 @@
   object-fit: contain;
 }
 
-/* Media Query for Small Screens */
+
 @media (max-width: 768px) {
   .nav-menu {
     display: none;
@@ -81,3 +105,4 @@
     display: none;
   }
 }
+
