--- a/Frontend/src/Components/styles/Navbar.css
+++ b/Frontend/src/Components/styles/Navbar.css
@@ -3,11 +3,10 @@
 /*  */
 
 
-
 .right-block {
   display: flex;
   align-items: center;
-  flex-direction: column; 
+
 }
 .user-info {
   display: flex;
@@ -87,6 +86,12 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+.logout{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 
