--- a/Frontend/src/Components/styles/Gallery.css
+++ b/Frontend/src/Components/styles/Gallery.css
@@ -1,7 +1,12 @@
+.gallery-main{
+  padding: 20px;
+}
+
 .gallery-container {
     display: grid;
     width: 100%;
     grid-template-columns: repeat(2, 3fr);
+    gap: 10px;
   }
   
   .main-img {
@@ -14,18 +19,22 @@
   .main-img img {
     width: 100%;
     height: 100%;
-    object-fit: cover; 
+    object-fit: cover;
+    border-radius: 10px;
   }
   
   .img-grid {
     flex: 1;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
   }
   
   .grid-item img {
     max-width: 100%;
     height: 100%;
+    border-radius: 10px;
+    object-fit: cover; 
   }
   
   .ver-mas{
