--- a/Frontend/src/Components/styles/AdminAddVehicleForm.css
+++ b/Frontend/src/Components/styles/AdminAddVehicleForm.css
@@ -55,3 +55,21 @@
   .submit-button:hover {
     background: #000000;
   }
+
+  .item-container{
+    display: flex;
+    gap: 5px;
+    background-color: rgba(128, 128, 128, 0.644);
+    padding: 5px;
+    color: white;
+    border-radius: 10px;
+    margin-top: 10px;
+    font-size: 14px;
+  }
+
+  .item-container button{
+    background-color: red;
+    color: white;
+    border: 1px solid white;
+    border-radius: 10px;
+  }
