fix renderizado de fotos en el front, creando seccion de busqueda

--- a/Frontend/src/Components/styles/CardHome.css
+++ b/Frontend/src/Components/styles/CardHome.css
@@ -70,9 +70,32 @@
 @media (max-width: 768px) {
 
   .card-grid {
-    display: grid !important;
-    grid-template-columns: 25% !important;
-    place-items: center;
-    justify-content: center;
+    grid-template-columns: 75% !important;
+  }
+
+  .card {
+    width: 100%;
+    flex-direction: column;
+    margin: 10px 0;
+  }
+  
+  .card img {
+    width: 100%;
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 1400px) {
+
+
+
+  .card {
+    width: 100%;
+    flex-direction: column;
+  }
+  
+  .card img {
+    width: 100%;
+    max-width: 100%;
   }
 }
