--- a/Frontend/src/Components/styles/Home.css
+++ b/Frontend/src/Components/styles/Home.css
@@ -5,6 +5,11 @@
   justify-content: center;
   width: 100%;
 }
+.disabled-day {
+  background-color: red;
+  color: #999999;
+  cursor: not-allowed;
+}
 
 /*
 
@@ -55,24 +60,76 @@ main {
   width: 75px;
 }
 
+.react-datepicker__triangle{
+  display: none;
+}
+
+
+.react-datepicker__header {
+  background-color: #FFBE3F;
+}
+
+.react-datepicker__day--in-range, .react-datepicker__day--in-range, .react-datepicker__day--keyboard-selected, .react-datepicker__month-text--keyboard-selected, .react-datepicker__quarter-text--keyboard-selected, .react-datepicker__year-text--keyboard-selected, .react-datepicker__day--in-selecting-range:not(.react-datepicker__day--in-range, .react-datepicker__month-text--in-range, .react-datepicker__quarter-text--in-range, .react-datepicker__year-text--in-range), .react-datepicker__month-text--in-selecting-range:not(.react-datepicker__day--in-range, .react-datepicker__month-text--in-range, .react-datepicker__quarter-text--in-range, .react-datepicker__year-text--in-range), .react-datepicker__quarter-text--in-selecting-range:not(.react-datepicker__day--in-range, .react-datepicker__month-text--in-range, .react-datepicker__quarter-text--in-range, .react-datepicker__year-text--in-range), .react-datepicker__year-text--in-selecting-range:not(.react-datepicker__day--in-range, .react-datepicker__month-text--in-range, .react-datepicker__quarter-text--in-range, .react-datepicker__year-text--in-range){
+  background-color: #FFBE3F !important;
+  color: white;
+}
+
+.react-datepicker__day--excluded{
+  content: '-';
+  text-decoration: line-through;
+  border-radius: 2px;
+  color: red;
+}
+
+.react-datepicker__close-icon::after{
+  background-color: #FFBE3F;
+  color: black;
+}
 
 .buscador {
   margin-top: 0px;
   background-color: black;
+  flex-direction: column;
   display: flex;
   width: 100%;
-  height: 100%;
+  align-items: center;
   padding: 10px;
-  line-height: 2.5;
   border: 1px solid #ced4da;
-  border-radius: .25rem;
   justify-content: center;
   box-sizing: border-box;
   gap: 10px;
 }
 
+/* .jiMOeR .wrapper{
+  width: auto !important;
+} */
+
+.buscador-form{
+  margin: 15px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 50%;
+}
+
+.buscador-title{
+  color: white;
+}
+
+.buscador-title p{
+  max-width: 33%;
+  font-size: 14px;
+  margin: 0 auto;
+  text-align: center;
+}
+
 .buscador input {
   outline: none;
+  border: none;
+  height: 44px;
+  border-radius: 24px;
+  padding: 10px;
+  font-size: 16px;
 }
 
 .categorias{
@@ -82,11 +139,13 @@ main {
 }
 
 .btn-buscar {
-  border-radius: .25rem;
-  background-color: #ced4da;
-  height: 30px;
-  width: 100px;
+  border-radius: 24px;
+  background-color: #FFBE3F;
+  height: 44px;
+  padding: 0 30px;
   font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 .home-container{
@@ -156,8 +215,47 @@ main {
 
 }
 
+.div-hover{
+  cursor: pointer;
+}
+
 
 @media (max-width: 768px) {
+
+  .buscador-form{
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .buscador-form-input{
+    width: 100%;
+  }
+
+  .buscador-form div{
+    margin: 2px 0;
+  }
+
+  .react-datepicker__input-container,  .react-datepicker__input-container input, .react-datepicker-wrapper{
+    width: 100% !important;
+  }
+
+  .buscador-form-input input{
+    width: 100%;
+  }
+
+  .buscador-form .buscar, .buscador-form .buscar button{
+    width: 100%;
+  }
+
+  .buscador-title h1{
+    font-size: 24px;
+  }
+
+  .buscador-title p{
+    max-width: 100%;
+    font-size: 12px;
+  }
+
   .buscador {
     display: flex;
     align-items: center;
