--- a/Frontend/src/Components/styles/CardHome.css
+++ b/Frontend/src/Components/styles/CardHome.css
@@ -102,13 +102,50 @@
   width: 100%;
 }
 
-
 @media (max-width: 768px) {
+  .card {
+    flex-direction: column;
+    width: 600px;
+  }
+}
+
+@media (max-width: 1800px) {
 
   .card-grid {
     display: grid !important;
     grid-template-columns: 25% !important;
     place-items: center;
     justify-content: center;
+  }
+
+  .card {
+    flex-direction: column;
+    width: 300px;
+  }
+
+  .card-content img{
+    width: 20px;
+  }
+  
+  
+  .card-content-info{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    font-size: 10px;
+  }
+  
+  .card-content button {
+    width: 100%;
+    background-color: #FFBE3F;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 12px;
+    margin:5px
+    
   }
 }
