--- a/Frontend/src/Components/styles/DetailCard.css
+++ b/Frontend/src/Components/styles/DetailCard.css
@@ -99,7 +99,21 @@
     display: flex;
     align-items: start;
     justify-content: space-between;
+    flex-direction: column;
     width: 100%;
+  }
+
+  .reservar-button{
+    background-color: #FFBE3F;
+    outline: none;
+    border: none;
+    padding: 20px;
+    width: 100%;
+    font-size: 20px;
+    border-radius: 10px;
+    color: white;
+    font-weight: bold;
+    margin-top: 10px;
   }
 
   @media (max-width: 768px) {
