--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -90,3 +90,24 @@ tr:nth-child(even) {
   align-items: center;
 }
 
+.spinner-container {
+  background-color: rgba(255, 255, 255, 0.7); /* Fondo blanco pálido con opacidad */
+  padding: 20px; /* Agrega un poco de espacio alrededor del spinner */
+  border-radius: 8px; /* Ajusta según sea necesario */
+}
+
+.overlaySpinner{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(255, 255, 255, 1); /* Fondo blanco semitransparente para el efecto de desenfoque */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hidden{
+  display: none;
+}
