--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -62,6 +62,10 @@ table {
 
 }
 
+ul{
+  padding: 0;
+}
+
 td,
 th {
   border: 1px solid #dddddd;
@@ -109,5 +113,9 @@ tr:nth-child(even) {
 }
 
 .hidden{
+  display: none;
+}
+
+input[type="file"] {
   display: none;
 }
