--- a/Frontend/src/Components/styles/AdminAddVehicleForm.css
+++ b/Frontend/src/Components/styles/AdminAddVehicleForm.css
@@ -1,75 +1,130 @@
 /* Contenedor del formulario */
 .sectionAddVehicle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    margin-bottom: 20px; /* Deja espacio para el footer */
-  }
-  
-  .add-vehicle-container {
-    background: #FFBE3F; /* Fondo amarillo */
-    border: 1px solid #ccc;
-    border-radius: 10px; /* Bordes redondeados */
-    padding: 20px;
-    width: 400px;
-    margin-bottom: 20px;
-    text-align: center;
-  }
-  
-  .add-vehicle-form {
-    display: flex;
-    flex-direction: column;
-    text-align: center; /* Títulos centrados */
-  }
-  
-  /* Estilo para etiquetas y campos */
-  .label-field {
-    font-weight: bold;
-    margin-bottom: 10px;
-    text-align: center; /* Títulos centrados */
-  }
-  
-  /* Estilo para campos de texto y textarea */
-  .input-field {
-    padding: 5px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-  }
-  
-  /* Estilo para el botón */
-  .submit-button {
-    background: #000000;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 15px;
-    cursor: pointer;
-  }
-  /* Estilo para el botón "Elegir archivos" */
-.file-input-button {
-    display: block;
-    margin: 0 auto; /* Centra horizontalmente */
-  }
-  .submit-button:hover {
-    background: #000000;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-y: auto;
+  min-height: 100vh;
+  margin-bottom: 20px;
+  /* Deja espacio para el footer */
+}
 
-  .item-container{
-    display: flex;
-    gap: 5px;
-    background-color: rgba(128, 128, 128, 0.644);
-    padding: 5px;
-    color: white;
-    border-radius: 10px;
-    margin-top: 10px;
-    font-size: 14px;
-  }
+.add-vehicle-container {
+  background: #FFBE3F;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* Fondo amarillo */
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  /* Bordes redondeados */
+  padding: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+}
 
-  .item-container button{
-    background-color: red;
-    color: white;
-    border: 1px solid white;
-    border-radius: 10px;
-  }
+.add-vehicle-form {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  /* Títulos centrados */
+}
+
+/* Estilo para el botón */
+.submit-button {
+  background: #000000;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 15px;
+  cursor: pointer;
+}
+
+
+.submit-button:hover {
+  background: #000000;
+}
+
+.item-container {
+  display: flex;
+  gap: 5px;
+  background-color: rgba(128, 128, 128, 0.644);
+  padding: 5px;
+  color: white;
+  border-radius: 10px;
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+.item-container button {
+  background-color: red;
+  color: white;
+  border: 1px solid white;
+  border-radius: 10px;
+}
+
+.add-vehicle-form-input{
+  width: 100%;
+}
+
+.add-vehicle-form-input.modelo-marca, .add-vehicle-form-input.anio-patente{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  font-size: bold;
+}
+
+.add-vehicle-form-input-container {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  gap: 10px;
+  margin: 10px 0;
+  align-items: center;
+}
+
+.add-vehicle-form-input-container button{
+  width: 100%;
+}
+
+.add-vehicle-form-input.vehicle-descripcion{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  width: 100%;
+}
+
+.add-vehicle-form-input.vehicle-descripcion textarea{
+  width: 100%;
+  margin-top: 10px;
+}
+
+.add-vehicle-form-input-container select{ 
+  width: 100%;
+}
+
+.add-vehicle-form-input-field{
+  width: 100%;
+  padding: 5px;
+}
+
+.custom-file-upload {
+  background-color: #000000;
+  color: white;
+  padding: 10px;
+  width: 100%;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.image-previews{
+  padding: 10px;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 600px;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
