--- a/Frontend/src/Components/styles/Navbar.css
+++ b/Frontend/src/Components/styles/Navbar.css
@@ -8,13 +8,9 @@
   align-items: center;
 
 }
-.user-info {
+.user-info-nav {
   display: flex;
   align-items: center;
-}
-
-.user-info div {
-  margin-right: 8px; 
 }
 
 .navbar {
@@ -31,7 +27,7 @@
   box-sizing: border-box; 
 }
 
-.user-info {
+.user-info-nav {
   display: flex;
   align-items: center;
 }
@@ -48,6 +44,7 @@
   font-size: 16px;
   font-weight: bold;
   margin-right: 8px; 
+  cursor: pointer;
 }
 
 .user-greeting {
